--- a/src/gamex/gamexDesktopApp/Views/GameAdminView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/GameAdminView.xaml
@@ -114,7 +114,7 @@
                          Grid.ColumnSpan="2"
                          Margin="5"
                          FontSize="18"
-                         Height="350"
+                         Height="300"
                          MaxHeight="350"
                          TextWrapping="Wrap"
                          Text="{Binding Description}" />
@@ -154,8 +154,13 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
                 <Button x:Name="btnLoadImage"
                         Grid.Column="0"
+                        Grid.Row="1"
                         Content="Wczytaj obrazek"
                         FontSize="30"
                         Foreground="White"
@@ -163,9 +168,11 @@
                         Background="Black"
                         Margin="5"
                         Width="250"
+                        Height="50"
                         Command="{Binding LoadImageCommand}" />
                 <Button x:Name="btnCancel"
                         Grid.Column="2"
+                        Grid.Row="1"
                         Content="Anuluj"
                         FontSize="30"
                         Foreground="White"
@@ -173,9 +180,11 @@
                         Background="Black"
                         Margin="5"
                         Width="200"
+                        Height="50"
                         Command="{Binding BackToGamesCommand}" />
                 <Button x:Name="btnSave"
                         Grid.Column="1"
+                        Grid.Row="1"
                         Content="Zapisz"
                         FontSize="30"
                         Foreground="White"
@@ -183,11 +192,13 @@
                         Background="Black"
                         Margin="5"
                         Width="200"
+                        Height="50"
                         Command="{Binding UpdateGameCommand}" />
                 <TextBlock Width="250"
                            Grid.Column="0"
-                           Grid.ColumnSpan="2"
-                           Margin="5"
+                           Grid.ColumnSpan="3"
+                           Grid.Row="0"
+                           Margin="10"
                            HorizontalAlignment="Center"
                            DataContext="{Binding ErrorMessageViewModel}"
                            Foreground="DarkRed"
