--- a/src/gamex/gamexDesktopApp/Views/GamesAdminView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/GamesAdminView.xaml
@@ -49,7 +49,7 @@
                      FontSize="20"
                      VerticalContentAlignment="Center" />
             <Button x:Name="btnSearch"
-                    Command="{Binding ViewListCommand}"
+                    Command="{Binding RefreshGamesCommand}"
                     Grid.Column="7"
                     Grid.Row="0"
                     BorderBrush="Red"
@@ -63,7 +63,7 @@
                 Grid.Row="0"
                 BorderBrush="{x:Null}"
                 Background="White"
-                Command="{Binding GoToAccountViewCommand}">
+                Command="{Binding AccountViewCommand}">
                 <Image Source="/Images/user.png" Stretch="Uniform" />
             </Button>
             <Label x:Name="lblUser"
@@ -109,7 +109,7 @@
                     Content="UŻYTKOWNICY"
                     FontSize="40"
                     FontWeight="Bold" Background="{x:Null}"
-                    Command="{Binding GoToUsersCommand}" />
+                    Command="{Binding UsersViewCommand}" />
         </Grid>
 
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
@@ -210,7 +210,7 @@
                     BorderBrush="{x:Null}"
                     FontSize="20"
                     Width="180"
-                     Command="{Binding GoToGameViewCommand}" />
+                     Command="{Binding GameViewCommand}" />
             <Button x:Name="btnAdd"
                     Grid.Column="2"
                     Content="Dodaj grę"
@@ -306,7 +306,7 @@
                     Background="Black"
                     Content="Wróć do sklepu"
                     FontSize="25"
-                    Command="{Binding BackToGamesCommand}" />
+                    Command="{Binding GamesViewCommand}" />
         </StackPanel>
     </StackPanel>
 </UserControl>
