--- a/src/gamex/gamexDesktopApp/Views/UserView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/UserView.xaml
@@ -38,7 +38,7 @@
                     Grid.Row="0"
                     BorderBrush="{x:Null}"
                     Background="White"
-                    Command="{Binding GoToAccountViewCommand}">
+                    Command="{Binding AccountViewCommand}">
                 <Image Source="/Images/user.png" Stretch="Uniform" />
             </Button>
             <Label x:Name="lblUser"
@@ -214,7 +214,7 @@
                         Foreground="White"
                         Background="Black"
                         BorderBrush="{x:Null}"
-                        Command="{Binding BackToUsersCommand}" />
+                        Command="{Binding UsersViewCommand}" />
         </StackPanel>
         <StackPanel>
             <TextBlock Width="250"
