--- a/src/gamex/gamexDesktopApp/Views/WalletView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/WalletView.xaml
@@ -34,7 +34,7 @@
                     Grid.Row="0"
                     BorderBrush="{x:Null}"
                     Background="White"
-                    Command="{Binding GoToAccountViewCommand}">
+                    Command="{Binding AccountViewCommand}">
                 <Image Source="/Images/user.png" Stretch="Uniform" />
             </Button>
             <Label x:Name="lblUser"
@@ -175,7 +175,7 @@
                     Background="Black"
                     Content="Wróć do sklepu"
                     FontSize="25"
-                    Command="{Binding BackToGamesCommand}" />
+                    Command="{Binding GamesViewCommand}" />
             <TextBlock Width="250"
                        Grid.Column="1"
                        Grid.Row="5"
@@ -186,7 +186,6 @@
                        Text="{Binding Message}"
                        Visibility="{Binding HasMessage,
                        Converter={StaticResource BooleanToVisibilityConverter}}" />
-
         </Grid>
     </StackPanel>
 </UserControl>
