--- a/src/gamex/gamexDesktopApp/Views/GamesView.xaml
+++ b/src/gamex/gamexDesktopApp/Views/GamesView.xaml
@@ -1,4 +1,5 @@
 ﻿<UserControl x:Class="gamexDesktopApp.Views.GamesView"
+             x:Name="GmaesView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -191,7 +192,7 @@
                     Command="{Binding UpdatePageCommand}"
                     CommandParameter="Next" />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <!--<StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Height="40"
                     Width="300"
                     Margin="5"
@@ -201,7 +202,7 @@
                     Background="Black"
                     BorderBrush="{x:Null}"
                     Command="{Binding GameViewCommand}" />
-            </StackPanel>
+            </StackPanel>-->
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <TextBlock FontSize="12" Margin="5" FontStyle="Italic">
                     <TextBlock.Text>
@@ -247,30 +248,35 @@
                   SelectedItem="{Binding Selected, Mode=TwoWay}"
                   SelectedIndex="-1"
                   ScrollViewer.VerticalScrollBarVisibility="Visible"
-                  ScrollViewer.HorizontalScrollBarVisibility="Visible"
-                  Height="Auto">
+                  ScrollViewer.CanContentScroll="False"
+                  HorizontalAlignment="Stretch"
+                  VerticalAlignment="Stretch"
+                  MinHeight="800"
+                  MaxHeight="800">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <DockPanel Margin="2" Width="1090" HorizontalAlignment="Stretch">
-                        <Image Source="{Binding Source,
+                    <Border BorderBrush="Black"
+                            BorderThickness="1">
+                        <DockPanel Margin="2"
+                               Width="{Binding ActualWidth, ElementName=GmaesView}"
+                               HorizontalAlignment="Stretch">
+                            <Image Source="{Binding Source,
                                 Converter={StaticResource nullImageConverter},
                                 TargetNullValue={x:Null}}"
                                Height="150" />
-                        <TextBlock HorizontalAlignment="Center"
-                                   Margin="5"
+                            <TextBlock Margin="5"
                                    Text="{Binding Name}"
                                    FontSize="26"
                                    FontWeight="Bold"
-                                   TextWrapping="Wrap"
-                                   DockPanel.Dock="Left" />
-                        <TextBlock Margin="5"
-                                   HorizontalAlignment="Right"
+                                   TextWrapping="Wrap" />
+                            <TextBlock Margin="5"
                                    Text="{Binding Price, StringFormat={}{0} PLN}"
                                    FontSize="18"
                                    Foreground="Red"
                                    FontWeight="Bold"
-                                   DockPanel.Dock="Right" />
-                    </DockPanel>
+                                   VerticalAlignment="Bottom" />
+                        </DockPanel>
+                    </Border>
                 </DataTemplate>
             </ListBox.ItemTemplate>
             <i:Interaction.Triggers>
